feat: the layout was added

--- a/src/assets/css/additional-styles/utility-patterns.css
+++ b/src/assets/css/additional-styles/utility-patterns.css
@@ -64,7 +64,7 @@ input[type="search"]::-webkit-search-results-decoration {
 .form-textarea,
 .form-multiselect,
 .form-select {
-    @apply text-sm px-3 py-2 rounded-full;
+    @apply text-sm px-3 py-2 rounded-lg;
 }
 
 .form-input,
